@@ -1,21 +1,0 @@
-#specify the format of the status bar
-#Tags: missing, complete, offline, id3tag
-statusbar.format=[${complete}${offline}${id3tag}] 
-
-#Tags: missing.number, missing.percent
-statusbar.missing=\ ${missing.number} files missing |
-
-#Tags: complete.number, complete.total, complete.percent, complete.totalbytes
-statusbar.complete=\ ${complete.number} of ${complete.total} files = ${complete.percent}% complete at ${complete.totalbytes}
-
-#Tags: offline.number, offline.percent, online.number, online.percent
-statusbar.offline=\ | ${offline.number} files offline = ${online.percent}% online
-
-#Tags: artist, album, title, genre, year
-statusbar.id3tag=\ | ${genre} ${year}\ 
-
-#Tags: ofilename
-files.offline.filename=${ofilename}-OFFLINE
-
-#Tags: mfilename
-files.missing.filename=${mfilename}-MISSING
